# Life-Admin-Agent

./: .env.example  .gitignore  Makefile  OPENCLAW_INTEGRATION.md  README.md  backlog.md  config.py  database.py  exceptions.py  field_tests_full.md  main.py  models.py  project_description.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  scheduler.py
.github/workflows/: ci.yml
api/: auth.py  routes.py
bot/: client.py  handlers.py
migrations/: env.py
migrations/versions/: 0001_initial.py  109691c02427_add_reference_data_table.py  3f8a1b2c4d5e_add_r2_key_to_reference_data.py  6c9d2e3f4a5b_legacy_terminus.py  (+3 more)
modules/: cards.py  entity_view.py  google_auth.py  google_calendar.py  ingest.py  ingestion.py  lifecycle.py  notifications.py  parser.py  pdf.py  reference.py  reminders.py  search.py  state.py  storage.py  suggestions.py  tag_edit.py  vision.py
prompts/: classify.txt  entity_parser.txt  image_ocr.txt  patch.txt  reference_file_parse.txt  reference_find.txt  reference_generate.txt  reference_text_parse.txt  retrieve.txt  soul.txt  suggestion.txt  trip_checklist.txt
tests/: conftest.py  test_api.py  test_cards.py  test_config.py  test_entity_view.py  test_google_calendar.py  test_handlers.py  test_ingest.py  test_ingestion.py  test_lifecycle.py  test_models.py  test_notifications.py  test_parser.py  test_pdf.py  test_reference.py  test_reference_file.py  test_reminders.py  test_scheduler.py  test_search.py  test_soul.py  test_state.py  test_storage.py  test_suggestions.py  test_tag_edit.py  test_vision.py
